<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="Enter a value"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/Gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="26dp"
        android:textColor="#ed3572"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"

            android:background="@drawable/button_background"
            android:onClick="memClearBtnPush"
            android:text="@string/MemClear"
            android:textColor="#ff9a8d"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="memReadBtnPush"
            android:text="@string/MemRead"
            android:textColor="#ff9a8d"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="memMinusBtnPush"
            android:text="@string/MemMinus"
            android:textColor="#ff9a8d"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button

            android:id="@+id/button4"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="clearBtnPush"
            android:text="@string/Clear"
            android:textColor="#ff9a8d"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="staplesBtnPush"
            android:text="@string/Staples"
            android:textColor="#ff9a8d"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBtnPush"
            android:text="@string/Seven"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="percentBtnPush"
            android:text="@string/Percent"
            android:textColor="#ff9a8d"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="eightBtnPush"
            android:text="@string/Eight"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"

            android:background="@drawable/button_background"
            android:onClick="divBtnPush"
            android:text="@string/Divide"
            android:textColor="#ff9a8d"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button28" />

        <Button
            android:id="@+id/button12"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="nineBtnPush"
            android:text="@string/Nine"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button13"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="mulBtnPush"
            android:text="@string/Multiply"
            android:textColor="#ff9a8d"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button16"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="sixBtnPush"
            android:text="@string/Six"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button22"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="49dp"

            android:background="@drawable/button_background"
            android:contentDescription="@string/BackSpace"
            android:longClickable="true"
            android:onClick="backSpaceBtnPush"
            android:textColor="#ff9a8d"
            app:layout_constraintEnd_toEndOf="@+id/button28"
            app:layout_constraintStart_toStartOf="@+id/button28"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/button22"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBtnPush"
            android:text="@string/Five"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button14"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="fourBtnPush"
            android:text="@string/Four"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button15"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="minusBtnPush"
            android:text="@string/Minus"
            android:textColor="#ff9a8d"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button17"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="oneBtnPush"
            android:text="@string/One"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button18"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="twoBtnPush"
            android:text="@string/Two"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

        <Button
            android:id="@+id/button19"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="threeBtnPush"
            android:text="@string/Three"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button20"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="plusBtnPush"
            android:text="@string/Plus"
            android:textColor="#ff9a8d"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button23"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:text="@string/PlusMinus"
            android:textColor="#ff9a8d"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button24"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBtnPush"
            android:text="@string/Zero"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button23"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button25"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="pointBtnPush"
            android:text="@string/Point"
            android:textColor="#ff9a8d"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button24"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button26"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="equalBtnPush"
            android:text="@string/Equal"
            android:textColor="#ff9a8d"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/button25"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button27"
            android:layout_width="70dp"
            android:layout_height="49dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/Flip"
            android:layoutDirection="ltr"
            android:onClick="horizontalLayoutBtnPush"
            android:text="@string/Flip"
            android:textColor="#ff9a8d"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button28"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="memPlusBtnPush"
            android:text="@string/MemPlus"
            android:textColor="#ff9a8d"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>